<resources>
    <string name="app_name">DankChat</string>
    <string name="app_name_dank">DankChat (Dank)</string>
    <string name="send_hint">Send a message</string>
    <string name="login">Login</string>
    <string name="reload_emotes">Reload emotes</string>
    <string name="reconnect">Reconnect</string>
    <string name="clear_chat">Clear chat</string>
    <string name="add_dialog_title">Add channel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="error_dialog_copy">Copy</string>
    <string name="error_dialog_title">Caught exception: %1$s</string>
    <string name="add_channel">Add channel</string>
    <string name="manage_channels">Manage channels</string>
    <string name="open_channel">Open channel</string>
    <string name="no_channels_added">No channels added</string>
    <string name="confirm_logout_title">Confirm logout</string>
    <string name="confirm_logout_message">Are you sure you want to logout?</string>
    <string name="confirm_logout_positive_button">Logout</string>
    <string name="upload_media">Upload media</string>
    <string name="take_picture">Take picture</string>
    <string name="record_video">Record video</string>
    <string name="choose_media">Choose existing media</string>
    <string name="hide_actionbar">Hide toolbar</string>
    <string name="resume_scroll">Resume scroll</string>
    <string name="uploading_image">Uploading image</string>
    <string name="settings">Settings</string>
    <string name="nuuls_upload_disclaimer">External hosting provided by https://nuuls.com/i, use at your own risk.</string>
    <string name="nuuls_upload_title">Custom image upload</string>
    <string name="snackbar_message_copied">Message copied</string>
    <string name="snackbar_error_copied">Error information copied</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_title">FeelsDankMan</string>
    <string name="notification_message">DankChat running in the background</string>
    <string name="emote_menu_hint">Open the emote menu</string>
    <string name="login_title">Login to Twitch.tv</string>
    <string name="hint_connected">Start chatting</string>
    <string name="hint_disconnected">Disconnected</string>
    <string name="hint_not_logged_int">Not logged in</string>
    <string name="notification_new_mentions">You have new mentions</string>
    <string name="notification_mention">%1$s just mentioned you in #%2$s</string>
    <string name="notification_notify_mention">You were mentioned in #%1$s</string>
    <string name="snackbar_login">Logging in as %1$s</string>
    <string name="snackbar_login_failed">Failed to login</string>
    <string name="snackbar_image_uploaded">Copied: %1$s</string>
    <string name="snackbar_upload_failed">Error during upload</string>
    <string name="snackbar_upload_failed_cause">Error during upload: %1$s</string>
    <string name="snackbar_retry">Retry</string>
    <string name="snackbar_data_reloaded">Emotes reloaded</string>
    <string name="snackbar_data_load_failed_cause">Data loading failed: %1$s</string>
    <string name="snackbar_paste">Paste</string>
    <string name="add_channel_hint">Channel name</string>
    <string name="emote_menu_tab_subs">Subs</string>
    <string name="emote_menu_tab_channel">Channel</string>
    <string name="emote_menu_tab_global">Global</string>
    <string name="system_message_connected">Connected</string>
    <string name="system_message_disconnected">Disconnected</string>
    <string name="system_message_no_history">You are not seeing any historical messages because you opted out of the recent-messages integration.</string>
    <string name="timed_out_message">&lt; Message deleted ></string>
    <string name="multi_entry_header_regex">Regex</string>
    <string name="multi_entry_header_match_user">Match user</string>
    <string name="multi_entry_add_entry">Add an entry</string>
    <string name="multi_entry_remove_content_description">Remove the entry</string>
    <string name="multi_entry_hint">Entry</string>
    <string name="login_expired">Login expired! Try logging in again.</string>
    <string name="message_history_disclaimer_title">Message history disclaimer</string>
    <string name="message_history_disclaimer_message">DankChat loads historical messages from a third-party service on startup.\nTo get the messages, DankChat sends the names of the channels you have open to that service.\nThe service temporarily stores messages for channels you (and others) visit to provide the service.\n\n- To not use this feature, click Opt-Out below or disable message history loading in the settings later.\n- You can learn more about the service and disable message history for your own channel by visiting https://recent-messages.robotty.de/</string>
    <string name="dialog_optin">Opt-in</string>
    <string name="dialog_optout">Opt-out</string>
    <string name="more">More</string>
    <string name="mentions_title">Mentions / Whispers</string>
    <string name="whispers">Whispers</string>
    <string name="notification_whisper_mention">%1$s sent you a whisper</string>
    <string name="mentions">Mentions</string>
    <string name="confirm_channel_removal_title">Confirm channel removal</string>
    <string name="confirm_channel_removal_message">Are you sure you want to remove this channel?</string>
    <string name="confirm_channel_removal_positive_button">Remove</string>
    <string name="user_popup_follow">Follow</string>
    <string name="user_popup_unfollow">Unfollow</string>
    <string name="user_popup_block">Block</string>
    <string name="user_popup_unblock">Unblock</string>
    <string name="user_popup_mention">Mention user</string>
    <string name="user_popup_whisper">Whisper user</string>
    <string name="user_popup_created">Created: %1$s</string>
    <string name="user_popup_following_since">Following since %1$s</string>
    <string name="user_popup_not_following">Not following</string>
    <string name="user_popup_avatar_description">Profile avatar image</string>
    <string name="user_popup_error">Failed to load user data: %1$s</string>
    <string name="confirm_user_unfollow_title">Confirm unfollow</string>
    <string name="confirm_user_unfollow_message">Are you sure you want to unfollow this user?</string>
    <string name="confirm_user_block_title">Confirm block</string>
    <string name="confirm_user_block_message">Are you sure you want to block this user?</string>
    <string name="confirm_user_block_positive_button">Block</string>
    <string name="restart_required">Restart required to apply changes</string>
    <string name="restart">Restart</string>
    <string name="shared_preference_key" translatable="false">com.flxrs.dankchat_preferences</string>
    <string name="preference_timestamp_title">Show timestamps</string>
    <string name="preference_timestamp_key" translatable="false">show_timestamp</string>
    <string name="preference_mention_format_title">Mention format</string>
    <string name="preference_mention_format_summary">Change the mention format when clicking an username</string>
    <string name="preference_mention_format_key" translatable="false">mention_format</string>
    <string name="preference_roomstate_key" translatable="false">show_roomstate</string>
    <string name="preference_roomstate_title">Show roomstate information</string>
    <string name="preference_roomstate_summary">Displays information about the current roomstate like subscribers only mode</string>
    <string name="preference_streaminfo_key" translatable="false">show_streaminfo</string>
    <string name="preference_streaminfo_title">Show stream information</string>
    <string name="preference_streaminfo_summary">Displays live status and viewer count</string>
    <string name="preference_notification_key" translatable="false">notification_key</string>
    <string name="preference_notification_title">Show mention notifications</string>
    <string name="preference_notification_summary">Creates notifications when mentioned while the app is in the background</string>
    <string name="preference_notification_header">Notifications</string>
    <string name="preference_chat_header">Chat</string>
    <string name="preference_chat_key" translatable="false">chat_key</string>
    <string name="preference_logout_key" translatable="false">logout_key</string>
    <string name="preference_logout_title">Logout</string>
    <string name="preference_general_header">General</string>
    <string name="preference_about_header">About</string>
    <string name="preference_appearance_header">Appearance</string>
    <string name="preference_appearance_key" translatable="false">appearance_key</string>
    <string name="preference_about_summary">DankChat %1$s made by @flex3rs and contributors\n\nTwitch emote data provided by twitchemotes.com</string>
    <string name="preference_about_key" translatable="false">about_key</string>
    <string name="preference_show_input_key" translatable="false">show_input_key</string>
    <string name="preference_show_input_title">Show input</string>
    <string name="preference_show_input_summary">Displays the input field to send messages</string>
    <string name="preference_dark_theme_key" translatable="false">enable_dark_mode</string>
    <string name="preference_dark_theme_title">Enable dark theme</string>
    <string name="preference_show_timed_out_messages_key" translatable="false">show_timed_out_messages_key</string>
    <string name="preference_show_timed_out_messages_title">Show timed out messages</string>
    <string name="preference_custom_mentions_key" translatable="false">custom_mentions_key</string>
    <string name="preference_custom_mentions_title">Custom mentions</string>
    <string name="preference_custom_mentions_summary">Set custom phrases as mentions</string>
    <string name="preference_blacklist_key" translatable="false">custom_blacklist_key</string>
    <string name="preference_blacklist_title">Blacklist</string>
    <string name="preference_blacklist_summary">Set custom phrases to hide</string>
    <string name="preference_animate_gifs_key" translatable="false">animate_gifs_key</string>
    <string name="preference_animate_gifs_title">Animate gifs</string>
    <string name="preference_line_separator_key" translatable="false">line_seperator_key</string>
    <string name="preference_line_separator_title">Separate messages with lines</string>
    <string name="preference_keep_screen_on_key" translatable="false">keep_screen_on_key</string>
    <string name="preference_keep_screen_on_title">Keep screen on</string>
    <string name="preference_font_size_key" translatable="false">font_size_key</string>
    <string name="preference_font_size_title">Font size</string>
    <string name="preference_font_size_summary_very_small">Very small</string>
    <string name="preference_font_size_summary_small">Small</string>
    <string name="preference_font_size_summary_large">Large</string>
    <string name="preference_font_size_summary_very_large">Very large</string>
    <string name="preference_notifications_mentions_header">Notifications and Mentions</string>
    <string name="preference_notifications_mentions_key" translatable="false">notifications_mentions_key</string>
    <string name="preference_suggestions_key" translatable="false">suggestions_key</string>
    <string name="preference_suggestions_title">Emote and user suggestions</string>
    <string name="preference_suggestions_summary">Shows suggestions for emotes and active users while typing</string>
    <string name="preference_load_message_history_title">Load message history on start</string>
    <string name="preference_developer_header">Developer options</string>
    <string name="preference_developer_key" translatable="false">developer_key</string>
</resources>