<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.flxrs.dankchat.preferences.AppearanceSettingsFragment"
        app:icon="@drawable/ic_palette"
        app:key="@string/preference_appearance_key"
        app:title="@string/preference_appearance_header" />

    <Preference
        app:fragment="com.flxrs.dankchat.preferences.NotificationsSettingsFragment"
        app:icon="@drawable/ic_notifications_active"
        app:key="@string/preference_notifications_mentions_key"
        app:title="@string/preference_notifications_mentions_header" />

    <Preference
        app:fragment="com.flxrs.dankchat.preferences.ChatSettingsFragment"
        app:icon="@drawable/ic_forum"
        app:key="@string/preference_chat_key"
        app:title="@string/preference_chat_header" />

    <Preference
        app:fragment="com.flxrs.dankchat.preferences.DeveloperSettingsFragment"
        app:icon="@drawable/ic_developer_mode"
        app:key="@string/preference_developer_key"
        app:title="@string/preference_developer_header" />

    <Preference
        android:icon="@drawable/ic_exit_to_app"
        android:key="@string/preference_logout_key"
        android:title="@string/preference_logout_title" />

    <PreferenceCategory
        android:title="@string/preference_about_header"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/preference_about_key"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>